# tramwaj-wodny

./: CMakeLists.txt  README.md  config.env  config2.env  config3.env  config4.env  config5.env
raport/: raport.md
src/: captain.cpp  common.h  config.cpp  config.h  dispatcher.cpp  ipc.cpp  ipc.h  logger.cpp  logger.h  main.cpp  passenger.cpp
tests/: TESTS.md  basic.env  bikes.env  full_ship.env  signal1.env  signal2.env  stress.env
